--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
   <body>
     <h1> Welcome to my webpage </h1>
   </body>
-  <footer> This site is property of Joseph Anderson </footer>
+  <footer> 
+    <h1> This site is property of Joseph Anderson </h1>
+  </footer>
 </html>
