--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <h1> Welcome to my webpage </h1>
   </body>
   <footer> 
-    <h1> This site is property of Joseph Anderson </h1>
+    <p> This site is property of Joseph Anderson </p>
   </footer>
 </html>
