--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!Doctype html>
 <html>
+  <head>
+    <title>Providence</title>
+  </head>
   <body>
     <h1> Welcome to my webpage </h1>
   </body>
