--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!Doctype html>
 <html>
   <head>
-    <title> Providence </title>
+    <title> ArakNet </title>
   </head>
   <body>
-    <h1> Welcome to my webpage </h1>
+    <h1> Welcome to ArakNet </h1>
   </body>
   <footer> 
-    <p> This site is property of Joseph Anderson </p>
+    <p> This site is property of ArakNet Inc </p>
   </footer>
 </html>
