--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1> Welcome to ArakNet </h1>
+    <p> Join ArakNet is becoming the leader in personal data protection and the new internet. </p>
   </body>
   <footer> 
     <p> This site is property of ArakNet Inc </p>
