--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
   </head>
   <body>
     <h1> Welcome to ArakNet </h1>
+    <div id="lower-text">
     <p> Join ArakNet is becoming the leader in personal data protection and the new internet. </p>
+    </div>
+    <a href="https://www.google.com"> google.com </a>
+    <div id="examples">
+      <ul>
+        <li> Top item </li>
+        <li> Middle item </li>
+        <li> Bottom item </li>
+      </ul>
+      <ol>
+        <li> First item </li>
+        <li> Second item </li>
+        <li> Third item </li>
+      </ol>
+        
+    </div>
   </body>
   <footer> 
     <p> This site is property of ArakNet Inc </p>
