--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <p> Join ArakNet is becoming the leader in personal data protection and the new internet. </p>
     </div>
     <a href="https://www.google.com"> google.com </a>
+    <p><a href="#list-examples"> Go to lits </a></p>
     <div id="examples">
       <ul>
         <li> Top item </li>
