--- a/workpage.html
+++ b/workpage.html
@@ -2,4 +2,7 @@
   <head>
     <Title> Araknet.workpage </Title>
   </head>
+  <body>
+  <p><a href="index.html"> back to index</a></p>
+  </body>
 </html>
