--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </div>
     <a href="https://www.google.com"> google.com </a>
     <p><a href="#list-examples"> Go to lits </a></p>
+    <p><a href="workpage.html">To workpage</a></p>
     <div id="examples">
       <ul>
         <li> Top item </li>
