--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="https://www.google.com"> google.com </a>
     <p><a href="#list-examples"> Go to lits </a></p>
     <p><a href="workpage.html">To workpage</a></p>
+    <img src="20211010_193716.jpg"></img>
     <div id="examples">
       <ul>
         <li> Top item </li>
