--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <p><a href="workpage.html">To workpage</a></p>
     <img src="20211010_193716.jpg"></img>
     <div id="examples">
+     <!-- You are the best-->
+      <p>
+        This if my <b>first</b> <i>entry</i>. I <em> want</em> to go home! <strong> Will </strong> I go home soon. <small> I </small> think <mark> not </mark>. <del> Never</del> <ins> good </ins>
+        This is my 1<sup>st</sup> for iteration <sub> i </sub>
+      </p>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/uyr61sUw8ws" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <ul>
         <li> Top item </li>
