--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!Doctype html>
 <html>
   <head>
+<link rel="stylesheet" href="css-style.css">
+<style>
     <title> ArakNet </title>
+    <meta name="Author" contents ="Joseph Anderson"
+    <meta name"description" contents = "A test bed website.">
+    <meta name"keywords" contents="testing class assignment">
   </head>
   <body>
     <h1> Welcome to ArakNet </h1>
