--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="Author" contents ="Joseph Anderson"
     <meta name"description" contents = "A test bed website.">
     <meta name"keywords" contents="testing class assignment">
+    </style>
   </head>
   <body>
     <h1> Welcome to ArakNet </h1>
