--- a/index.html
+++ b/index.html
@@ -1,44 +1,20 @@
-<!Doctype html>
+<!doctype html>
 <html>
-  <head>
-<link rel="stylesheet" href="css-style.css">
-<style>
-    <title> ArakNet </title>
-    <meta name="Author" contents ="Joseph Anderson"
-    <meta name"description" contents = "A test bed website.">
-    <meta name"keywords" contents="testing class assignment">
-    </style>
-  </head>
-  <body>
-    <h1> Welcome to ArakNet </h1>
-    <div id="lower-text">
-    <p> Join ArakNet is becoming the leader in personal data protection and the new internet. </p>
-    </div>
-    <a href="https://www.google.com"> google.com </a>
-    <p><a href="#list-examples"> Go to lits </a></p>
-    <p><a href="workpage.html">To workpage</a></p>
-    <img src="20211010_193716.jpg"></img>
-    <div id="examples">
-     <!-- You are the best-->
-      <p>
-        This if my <b>first</b> <i>entry</i>. I <em> want</em> to go home! <strong> Will </strong> I go home soon. <small> I </small> think <mark> not </mark>. <del> Never</del> <ins> good </ins>
-        This is my 1<sup>st</sup> for iteration <sub> i </sub>
-      </p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/uyr61sUw8ws" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <ul>
-        <li> Top item </li>
-        <li> Middle item </li>
-        <li> Bottom item </li>
-      </ul>
-      <ol>
-        <li> First item </li>
-        <li> Second item </li>
-        <li> Third item </li>
-      </ol>
-        
-    </div>
-  </body>
-  <footer> 
-    <p> This site is property of ArakNet Inc </p>
-  </footer>
+	<head>
+		<title>ArakNet</title>
+		<link rel="stylesheet" type="text/css" href="../ArakNet2.0/css/style.css">
+	</head>
+	<body>
+		<div class="headerMenu">
+			<div id="wrapper">
+				<div class="logo">
+				</div>
+				<div id="menu">
+					<a href="#" />Home</a>
+					<a href="#" />About</a>
+					<a href="#" />Contact</a>
+					<a href="#" /></a>
+				</div>
+			</div>
+		</div>
 </html>
