--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 				<div class="logo">
 				</div>
 				<div id="menu">
-					<a href="#" />Home</a>
-					<a href="#" />About</a>
-					<a href="#" />Contact</a>
+					<a href="index.html" />Home</a>
+					<a href="about.html" />About</a>
+					<a href="contacts.html" />Contact</a>
 					<a href="#" /></a>
 				</div>
 			</div>
