--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 		<div class="headerMenu">
 			<div id="wrapper">
 				<div class="logo">
+					<div style="background-image: url(../img/profile-picture.jpg);background-size: cover; height:480px; padding-top:80px;">
+  					<img src="ImageFilePath" style="height:150px">
+						</div>
 				</div>
 				<div id="menu">
 					<a href="index.html" />Home</a>
