--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
 	<body>
 		<div class="headerMenu">
 			<div id="wrapper">
-				<div class="logo">
-					<div style="background-image: url(../img/profile-picture.jpg);background-size: cover; height:480px; padding-top:80px;">
-						</div>
-				</div>
+				<div class="logo" style="background-image: url(../img/profile-picture.jpg);background-size: cover; height:480px; padding-top:80px;">
+					</div>
 				<div id="menu">
 					<a href="index.html" />Home</a>
 					<a href="about.html" />About</a>
