--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<div class="headerMenu">
 			<div id="wrapper">
-				<div class="logo" style="background-image: url(../img/profile-picture.jpg);background-size: cover; height:480px; padding-top:80px;">
+				<div class="logo">
 					</div>
 				<div id="menu">
 					<a href="index.html" />Home</a>
