--- a/index.html
+++ b/index.html
@@ -17,4 +17,9 @@
 				</div>
 			</div>
 		</div>
+	</body>
+	<body>
+		<div class="logo" style="background-image: url(../img/profile-picture.jpg);background-size: cover; height:480px; padding-top:80px;">
+					</div>
+				</body>
 </html>
