--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</div>
 	</body>
 	<body>
-		<div class="logo" style="background-image: url(../img/profile-picture.jpg); background-size: cover;">
+		<div class="logo"; style="background-image: url(../img/profile-picture.jpg)"; background-size: cover;>
 					</div>
 				</body>
 </html>
