--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 		</div>
 	</body>
 	<body>
-		<div class="logo"; style="background-image: url(../img/profile-picture.jpg)"; background-size: cover;>
-					</div>
-				</body>
+		<div style="background-image: url(../img/profile-picture.jpg);background-size: cover; height:480px; padding-top:80px;">
+ 		 	<img src="ImageFilePath" style="height:150px">
+			</div>
+		</body>
 </html>
