--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</body>
 	<body>
 		<div style="background-image: url(../img/profile-picture.jpg);background-size: cover; height:480px; padding-top:80px;">
- 		 	<img src="ImageFilePath" style="height:150px">
+ 		 	<img src="ImageFilePath" style="height:150px"; border-radius: 50%; border: 10px solid #FEDE00;">
 			</div>
 		</body>
 </html>
