--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		</div>
 	</body>
 	<body>
-		<div style="background-image: url(../img/profile-picture.jpg);background-size: cover; height:480px; padding-top:80px;">
- 		 	<img src="ImageFilePath" style="height:150px"; border-radius: 50%; border: 10px solid #FEDE00;">
-			</div>
-		</body>
+		<div>
+ 		 <img src="../img/profile-picture.jpg" style="height:150px"; border-radius: 50%; border: 10px solid #FEDE00;">
+	</div>
+</body>
 </html>
