--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 			</div>
 		</div>
 	</body>
-	<body>
-		<div>
- 		 <img src="../img/profile-picture.jpg" style="height:150px"; border-radius: 50%; border: 10px solid #FEDE00;">
-	</div>
-</body>
+<body>
+	<div>
+		<img src="../img/profile-picture.jpg" style="height:150px"; border-radius: 50%; border: 10px solid #FEDE00;">
+		<p> Welcome to ArakNet my personal profile site. Enjoy the fun site! </p>
+	</body>
 </html>
