--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 <body>
 	<div class="logo" style="background-image: url(../img/rocket.jpg)
 				 </div>
+				 </body>
+				 <body>
 	<div>
 		<img src="../img/profile-picture.jpg" style="height:150px"; border-radius: 50%; border: 10px solid #FEDE00;">
 		<p> Welcome to ArakNet my personal profile site. Enjoy the fun site! </p>
