--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
 	</head>
 	<body>
+		<div style="background-color: red;">
 		<div class="headerMenu">
 			<div id="wrapper">
 				<div class="logo">
@@ -17,8 +18,9 @@
 				</div>
 			</div>
 		</div>
-	</body>
-<body style="background-color: red;">
+	</div>
+</body>
+<body>
 	<div>
 		<img src="../img/profile-picture.jpg" style="height:150px"; border-radius: 50%; border: 10px solid #FEDE00;">
 		<p> Welcome to ArakNet my personal profile site. Enjoy the fun site! </p>
