--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
 	<div>
 		<img src="../img/profile-picture.jpg" style="height:150px"; border-radius: 50%; border: 10px solid #FEDE00;">
 		<p> Welcome to ArakNet my personal profile site. Enjoy the fun site! </p>
+		<a href ="https://www.youtube.com/channel/UCSAoYsaD2EFT1qBYX0Tb5jQ"> Yotube/Galileo</a>
 	</body>
 </html>
