--- a/contacts.html
+++ b/contacts.html
@@ -17,4 +17,18 @@
 				</div>
 			</div>
 		</div>
+</body>
+<body>
+	<p> Contact Information </p>
+	<ul>
+        <li> (603)-219-6582 </li>
+        <li> josephanderons@gmail.com </li>
+        <li> admin@Galileo-sat.com</li>
+      </ul>
+      <ol>
+	<P> Why you should Join ArakNet</p>
+        <li>Join Us!  </li>
+        <li>Subsribe to Us!</li>
+        <li>Hear our Roar!</li>
+      </ol>
 </html>
