--- a/youtube.html
+++ b/youtube.html
@@ -19,16 +19,5 @@
 		</div>
 </body>
 <body>
-	<p> Contact Information </p>
-	<ul>
-        <li> (603)-219-6582 </li>
-        <li> josephanderons@gmail.com </li>
-        <li> admin@Galileo-sat.com</li>
-      </ul>
-      <ol>
-	<P> Why you should Join ArakNet</p>
-        <li>Join Us!  </li>
-        <li>Subsribe to Us!</li>
-        <li>Hear our Roar!</li>
-      </ol>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/zekfpIRlVyY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </html>
