--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
 		<img src="../img/profile-picture.jpg" style="height:150px"; border-radius: 50%; border: 10px solid #FEDE00;">
 		<p> Welcome to ArakNet my personal profile site. Enjoy the fun site! </p>
 		<a href ="https://www.youtube.com/channel/UCSAoYsaD2EFT1qBYX0Tb5jQ"> Yotube/Galileo</a>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/5L-D4F7gnQM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/K5Vw2ZDe-G0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</body>
 </html>
