--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 					<a href="index.html" />Home</a>
 					<a href="about.html" />About</a>
 					<a href="contacts.html" />Contact</a>
-					<a href="#youtube.html" />Youtube</a>
+					<a href="youtube.html" />Youtube</a>
 				</div>
 			</div>
 		</div>
