--- a/about.html
+++ b/about.html
@@ -13,8 +13,15 @@
 					<a href="index.html" />Home</a>
 					<a href="about.html" />About</a>
 					<a href="contacts.html" />Contact</a>
-					<a href="#youtube.html" />Youtube</a>
+					<a href="youtube.html" />Youtube</a>
 				</div>
 			</div>
 		</div>
+</body>
+<body
+      <br>My name is Joseph Anderson,</br>
+      <br>I come from a small city called Dunbarton. I'm an entrepreneur. I spend my days building my business and working on projects. I love coding, learning how to write, and playing games </br>
+	<br> ArakNet is what I call my Blog. ArakNet is Also the future of Galileo. Galileo is a company I own that is focued on data protection, low cost internet, and going to space.</br>
+	<br>
+      </body>
 </html>
