--- a/Presentation.html
+++ b/Presentation.html
@@ -20,6 +20,6 @@
 		</div>
 </body>
 <body>
-  <img src="../img/state.png" style="height:150px"; border-radius: 50%; border: 10px solid #FEDE00;">
+  <img src="../img/states.jpg" style="height:150px"; border-radius: 50%; border: 10px solid #FEDE00;">
    <.body
   </hmtl>
