--- a/Presentation.html
+++ b/Presentation.html
@@ -21,5 +21,5 @@
 </body>
 <body>
   <img src="../img/states.jpg" style="height:150px"; border-radius: 50%; border: 10px solid #FEDE00;">
-   <.body
+   </body
   </hmtl>
