--- a/Presentation.html
+++ b/Presentation.html
@@ -20,6 +20,23 @@
 		</div>
 </body>
 <body>
-  <img src="../img/states.jpg" style="height:150px"; border-radius: 50%; border: 10px solid #FEDE00;">
+  <img src="img/states.jpg" style="height:150px"; border-radius: 50%; border: 10px solid #FEDE00;>
+	
+Most people think it’s the Corporation that dominates the sector but its actually the Sole Proprietorship 
+The Corporation make up only 19%
+The Partnership makes up only 8%
+The Sole Proprietorship makes up 73%
+When looking at the makeup of businesses most Americans choose to create the Sole Proprietorship, so to have complete control over their business
+
+In America there are over 25 million entrepreneurs. Of those 25 Million
+17% are 18-25
+24% are 25-35
+24% are 25-45
+14% are 45-55
+14% are 55-65
+7% are 65-75
+This break up shows how many entrepreneurs are ether younger or near the late 40s
+
+
    </body
   </hmtl>
