--- a/Presentation.html
+++ b/Presentation.html
@@ -20,7 +20,7 @@
 		</div>
 </body>
 <body>
-  <img src="img/states.jpg" style="height:150px"; border-radius: 50%; border: 10px solid #FEDE00;>
+  <img src="../img/States.jpg" style="height:150px"; border-radius: 50%; border: 10px solid #FEDE00;>
 	
 Most people think it’s the Corporation that dominates the sector but its actually the Sole Proprietorship 
 The Corporation make up only 19%
