--- a/Presentation.html
+++ b/Presentation.html
@@ -22,21 +22,22 @@
 <body>
   <img src="../img/States.jpg">
 	
-Most people think it’s the Corporation that dominates the sector but its actually the Sole Proprietorship 
-The Corporation make up only 19%
-The Partnership makes up only 8%
-The Sole Proprietorship makes up 73%
+<h1> Most people think it’s the Corporation that dominates the sector but its actually the Sole Proprietorship </h1>
+<ol>
+	<li>The Corporation make up only 19%</li>
+	<li>The Partnership makes up only 8%</li>
+	<li>The Sole Proprietorship makes up 73%</li>
 When looking at the makeup of businesses most Americans choose to create the Sole Proprietorship, so to have complete control over their business
-
+	</ol>
+	<ul>
 In America there are over 25 million entrepreneurs. Of those 25 Million
-17% are 18-25
-24% are 25-35
-24% are 25-45
-14% are 45-55
-14% are 55-65
-7% are 65-75
+	<li>17% are 18-25 </li>
+	<li>24% are 25-35 </li>
+	<li>24% are 25-45</li>
+	<li>14% are 45-55</li>
+	<li>14% are 55-65</li>
+	<li>7% are 65-75</li>
 This break up shows how many entrepreneurs are ether younger or near the late 40s
-
-
+	</ul>
    </body
   </hmtl>
