--- a/Presentation.html
+++ b/Presentation.html
@@ -20,7 +20,7 @@
 		</div>
 </body>
 <body>
-  <img src="../img/States.jpg">
+  <img src="../img/States.jpg" style= "hieght:480px">
 	
 <h1> Most people think it’s the Corporation that dominates the sector but its actually the Sole Proprietorship </h1>
 <ol>
